--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ button {
     min-width: 100px;
 }
 
-button.primary {
+button.primary,button.primary:disabled {
     background-color: var(--primary);
     border-color: var(--primary);
 }
@@ -36,9 +36,12 @@ button.primary:hover, button.primary:active, button.primary:focus {
 }
 
 #numbers {
+    display: block;
     font-size: 10rem;
     font-weight: bold;
-    display: block;
+    line-height: 1;
+    word-break: break-word;
+    padding-inline: calc(var(--p) / 2);
 }
 
 #message {
