--- a/main.css
+++ b/main.css
@@ -19,8 +19,8 @@ button.primary,button.primary:disabled {
 }
 
 button.primary:hover, button.primary:active, button.primary:focus {
-    background-color: var(--seconday);
-    border-color: var(--seconday);
+    background-color: var(--secondary);
+    border-color: var(--secondary);
 }
 
 #history-btn {
